공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -434,3 +434,107 @@
       - ***작업훔치기*** 를 통해서 ForkJoinPool의 모든 스레드를 거의 공정하게 작업이 배정된다
         - 할일이 없어진 스레드는 유휴 상태로 바뀌는것이 아니라, 다른 스레드 큐의 꼬리에서 작업을 훔쳐온다(Deque라서 가능)
     - Spliterator 인터페이스 <span style="color:yellow">이 부분은 다시 공부해보자.. 어렵다..</span>
+- Part3 - 스트림과 람다를 이용한 효과적 프로그래밍
+  - 8장 컬렉션 API 개선
+    - 리스트와 집합처리 
+      - 새로운 컬렉션을 만드는것이 아니라, 기존 컬렉션을 변경한다!
+      - 메서드종류
+        - removeIf
+          - 프레디케이트를 만족하는 요소를 제거..
+          - List, Set 구현체 모두 사용가능
+          - for-each 루프에서 ConcurrentModificationException 을 예방해줌..
+            - 자세한예시는 "자바의정석_Collection.md" 에 정리해놨음
+        - replaceAll
+          - UnaryOperator 함수를 이용해 요소를 바꿈
+          - List 구현체에서 사용
+        - sort
+          - 리스트를 정렬
+          - List 구현체에서 사용
+            - Set은 스트림 sorted사용하면될듯..
+    - 맵 처리
+      - Map인터페이스에 디폴트 메서드로 자주 사용되는 패턴을 만들어놓앗음
+        - forEach
+          - key, value 사용가능
+        - 정렬
+          - Value 기준 또는 Key 기준으로 정렬가능
+          ```java
+            Map<String,String> map=new HashMap<String,String>(){{put("Rapheal","Star Wars");put("Cristina","Matrix");put("Olivia","James Bond");}};
+            map.entrySet().stream()
+                    .sorted(Map.Entry.comparingByKey()) //key 기준으로 정렬
+                    .forEachOrdered(System.out::println); // forEachOrdered는 병렬시 순서보장을 해준다.. 그러나 그렇게되면, 병렬의 이점을 누리지못한다..
+          ```
+        - getOrDefault
+          - key가 존재하지않을때 반환할 default값 셋팅
+        - 계산패턴
+          - computeIfAbsent
+            - 제공된 키에 해당하는 값이 없으면(또는 Null), 키를 이용해 새 값을 계산하고 맵에 추가
+          - computeIfPresent
+            - 제공된 키가 존재하면 새 값을 계산하고 맵에 추가
+          - compute
+            - 제공된 키로 새 값을 계산하고 맵에 추가
+        - 삭제패턴
+          - remove(key,value)
+            - 특정 value가 있을때 해당 key를 제거하도록 가능
+        - 교체 패턴
+          - replaceAll
+            - BiFunction을 적용한 결과로 각 항목의 ***값***을 교체
+          - replace
+        - 합침
+          - putAll(Map)
+            - 합치려고 하는 대상에 중복된 key가 있으면 합치려고 하는 대상의 값이 들어감
+          - merge(key,value,BiFunction)
+            - 중복되었을때 어떻게 처리할것인지 구체적으로 명시가능
+            - value에 값을 지정하면, 해당 key값의 value에 대한 초기화를 수행하도록 가능하다(해당 key가 기존 map에 없을때)
+              - 만약 중복되면 BiFunction 함수 타게되니깐 그에 맞는 중복처리해주면됨 
+              - ex. moviesToCount.merge(movieName, 1L, (key, value) -> count + 1L); //movieToCount 맵에 movieName이라는 key가 처음들어오면 값을 1L로 셋팅하고, 중복이면 기존 count에 +1을 해라!
+          ```java
+            Map<String,String> map1=new HashMap<String,String>(){{put("Rapheal","Star Wars");put("Cristina","Matrix");put("Olivia","James Bond");}};
+            Map<String,String> map2=new HashMap<String,String>(){{put("Kim","Star Wars");put("Cristina","Matrix2");put("Park","James Bond");}};
+            map1.forEach((k,v) -> map2.merge(k,v,(movie1,movie2)->movie1+" & "+movie2)); // BiFucntion에서 return이 null이면 해당 key는 제거됨
+                                                                                        // map1의 Cristina의 value가 null이라면, merge 되엇을때 Matrix2로 대치됨..("Matrix2 & null" 이렇게 반환안된다는거!)
+            //map2.putAll(map1); // "Cristina" 라는 중복되는 key의 value는 Matrix 로 엎어쳐짐
+
+            System.out.println(map2);
+          ```
+      - 개선된 ConcurrentHashMap
+        - 리듀스할때, 병렬성 기준값(Threshold)에 따라 병렬처리 가능
+          - Threshold가 1이면 병렬.. Long.MAX_VALUE 면 순차..
+      - *JAVA8 의 HashMap 성능개선
+        - 버킷이 너무 커질 경우 LinkedList로 저장되어있는 데이터를 트리로 변경함
+          - key가 String, Number 클래스 같은 Comparable 형태여야만 트리가 지원
+  - 9장 - 리팩터링, 테스팅, 디버깅
+    - 익명클래스를 람다로 리팩터링해서 불필요한 코드 반복을 줄일수 있다
+      - 주의해야할점
+        - 익명클래스의 this와 람다내부의 this는 다른객체를 가리킨다
+          - 익명클래스의 this는 익명클래스 자신을, 람다내부의 this는 람다를 호출하는 클래스를 가리킨다
+          - 익명클래스, 람다 모두 외부의 변수를 사용할수있으나, 익명클래스에서는 외부변수와 같은 변수이름을 선언하여 사용할수잇는반면(외부 변수를 가림 - shadow variable), 람다는 외부 변수와 같은 이름의 변수를 내부적으로 선언해서 사용불가!
+          - 익명클래스에서 람다표현식으로 바꿀때, 콘텍스트 오버로딩에 따른 모호함이 초래될수있음
+            - 람다표현식을 사용할때 명시적으로 타입캐스팅을 선언해줌
+    - 람다표현식이 길어지거나 명확하게 어떤 행동을 하는지 알수없을때에는, 메서드 참조로 리팩터링할것!
+    - 명령형 데이터처리된것을 가능하면 스트림으로 리팩터링할것!(가독성 훨씬 좋음)
+    - 코드 유연성 개선
+      - 람다를 전달해서 다양한 동작을 표현할수잇는, 즉 동작 파라미터화가 가능하여 변화하는 요구사항에 대응할수있도록 만들자
+      - 이를 위해서 함수형 인터페이스가 필요!
+      - 알아두면 좋은 패턴
+        - 조건부 연기 실행
+          - 객체의 상태에 따라 특정행동을 수행(조건부 연기) 해야 한다면, 함수형 인터페이스 & 람다표현식(or 메서드 참조)을 활용하자!
+            - 이는 가독성이 좋아질뿐아니라, 캡슐화(객체의 상태를 클라이언트에게 직접 노출하지않아도되니깐)도 강화된다!
+          - ex. Logging시 특정 레벨에 사용자가 원하는 형식의 로그를 남기고 싶을때.. 
+            ```java
+                public void log(Level level, Supplier<String> msgSupplier){
+                    if(logging.isLoggable(level)){
+                        log(level, msgSupplier.get());
+                    }
+                }
+                //넘겨받은 level이 현재 Logging의 level인지를 클라이언트에게 노출할필요없이 Logging 객체에서 진행가능하고(객체지향!), 특정 level에서 찍고 싶은 메세지(더 나아가 여러 행동들)를 사용자에게 전달받음으로써 클라이언트마다 원하는 동작들을 수행할수있을뿐 아니라, 해당 level이 되었을때만 동작하는 지연된(연기) 실행이 되어 불필요한 리소스 낭비가 줄일수있다
+            ```
+        - 실행 어라운드
+          - 같은 준비, 종료과정을 반복적으로 수행하는 코드있다면, 반복적으로 수행하는 부분에서 변화가 잇는부분을 분리하여 파라미터화(동작파라미터 - 함수형인터페이스)해서 클라이언트에게 넘겨받도록한다
+          - 템플릿/콜백 패턴과 동일
+    - 람다 테스팅
+      - 람다를 사용하는 메서드의 동작에 집중!
+        - 세부 구현을 포함하는 람다 표현식을 클라이언트에게 공개하지않아야하니깐, 람다표현식을 사용하는 메서드의 동작을 테스트함으로써 람다표현식을 검증할수있다 (람다 검증은 그냥 람다쓰고있는 메서드를 호출해서 그 결과로 검증해라는뜻인듯)
+      - 복잡한 람다를 테스트하기위해서는 메서드참조로 변경하여 테스트하는게 좋음(어차피 복잡한 람다는 메서드 참조로빼는게 가독성이 좋기떄문에.. 그리고 메서드참조를 사용하면 해당 람다로직을 검증하기도 수월)
+      - 메서드가 람다를 인수로받는다면, 다른 람다로 메서드의 동작을 테스트
+    - 디버깅
+      - 스트림 파이프라인의 연산들에는 peek 을 사용할수있다! 이는 데이터를 소비하지않기때문에, 연산중간중간에 넣어서 어떻게 데이터가 어떻게 처리되고있는지 디버깅할수있다!
