공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -538,3 +538,103 @@
       - 메서드가 람다를 인수로받는다면, 다른 람다로 메서드의 동작을 테스트
     - 디버깅
       - 스트림 파이프라인의 연산들에는 peek 을 사용할수있다! 이는 데이터를 소비하지않기때문에, 연산중간중간에 넣어서 어떻게 데이터가 어떻게 처리되고있는지 디버깅할수있다!
+- Part 4 매일 자바와 함께
+  - 11장 - null 대신 Optional 클래스
+    - null 때문에 발생하는 문제
+      - 에러의 근원 : NullPointerException..
+      - 코드를 어지럽힘 : 중첩된 null 확인 코드를 추가해야 하므로 null 때문에 코드가독성이 떨어짐
+      - 아무 의미가 없음 : null은 아무 의미도 표현하지않음. 
+      - 자바 철학에 위배 : 자바는 개발자로부터 모든 포인터를 숨겼는데, null 포인터는 예외로 만들어놧음..
+      - 형식 시스템에 구멍을 만듦 : null은 무형식이며 정보를 포함하고있지 않으므로 모든 참조형식에 null을 할당할수 있음.. 이런식으로 null이 할당되기 시작하면서 시스템의 다른 부분으로 Null이 퍼졌을때 애초에 null이 어떤의미로 사용되었는지 알수없음..
+    - Optional 클래스
+      - java 8은 하스켈과 스칼라의 영향을 받아서 java.util.Optional\<T\> 라는 새로운 클래스를 제공
+      - Optional을 사용함으로써 값이 없을수 있음을 명시적으로 보여주는것!
+        - 즉, null이 될수도있고 안될수도있는놈이다! 라고 알려주는것
+        - 모든 null 참조를 Optional로 대치하는것은 바람직하지않음!! 도메인에 null값이 들어가지않아야할곳에는 Optional을 쓰면안됨! 이때 Null이 발견되었다면 알고리즘의 버그이므로 이를 수정해야함.. Optional을 통해서는 이게 Null이 들어갈수있는 ***선택형값***인지 여부를 구별할수있는것!!
+          - 그래서 이를 사용하게되면 도메인 모델의 의미를 더 명확하게 만들수있겠지
+        - Optional을 인수로 받거나, Optional을 반환하는 메서드를 정의한다면 결과적으로 이 메서드를 사용하는 모든 사람에게 이 메서드가 빈 값을 받거나 빈 결과를 반환할 수 있음을 잘 문서화해서 제공하는것과 같다!
+      - Optional 주의사항
+        - Optional에 빈 값을 넣고싶으면, Optional.empty() 를 사용해야함(null을 대입하면안됨)
+        - Optional이 empty일때, get을 호출하면 예외떨어짐
+        - Map을 사용할수있는데, stream의 map과 비슷하다.. (값은 변경하는역할) 만약, empty라면 아무일도 일어나지않음
+        - flatMap의 평준화과정은 두 Optional을 합치는 기능을 수행하면서 둘 중 하나라도 null이면 빈 Optional을 생성하는 연산을 수행하는것
+        - Optional에 여러 체인닝되어있을때(map, flatmap 등등 수행) 중간에 하나라도 빈 Optional을 반환한다면, 전체 결과로 빈 Optional을 반환함.. 이때 orElse라는 메서드를 통해서 디폴트값을 제공해줄수있음
+        - 도메인 모델에 Optional을 사용했을때 데이터를 직렬화 할수 없다!
+          - Optional 클래스는 처음 만들때 필드형식으로 사용할것을 가정하지않았다고함..
+          - 직렬화 모델이 필요하다면 Optional로 반환할수있는 메서드를 추가하도록하자!
+            ```java
+              public class Person{
+                private Car car;
+                public Optional<Car> getCarAsOptional(){
+                  return Optional.ofNullable(car);
+                }
+              }
+            ```
+      - Optional의 디폴트 액션과 Optional 언랩을 위한 메서드
+        - get()
+          - 가장 간단한 메서드면서 동시에 가장 안전하지않은 메서드
+          - 빈 optional일때 호출하면 NoSuchElementException을 발생..
+          - 되도록 사용하지말것!
+        - orElse(T other)
+          - Optional이 값을 포함하지 않을때 기본값을 제공
+        - orElseGet(Supplier<? extends T> other)
+          - orElse 메서드에 대응하는 게으른 버전의 메서드
+          - Optional에 값이 없을때만 Supplier가 실행
+          - 필요할때만 수행이되니깐 되도록 이를 사용해서 효율성을 높일것!
+        - orElseThrow(Supplier<? extends X> exceptionSupplier)
+          - Optional이 비어있을때 예외를 발생(내가 원하는예외..)
+        - ifPresent(Consumer<? super T> consumer) 
+          - 값이 존재할때 인수로 넘겨준 동작을 실행
+          - 값이 없으면 아무일도 안일어남
+        - ifPresentOrElse(Consumer<? super T> action, Runnable emptyAction) 
+          - java 9부터 사용가능
+          - 기존 ifPresent에서 Optional이 비어있을때 실행할수있는 Runnable을 인수로받을수 있도록해놓음
+      - 두 Optional 센스있게 합치기
+        ```java
+          public Optional<Insurance> nullSafeFindCheapestInsurance(Optional<Person> person, Optional<Car> car){ //if문으로 막 isPresent() 이렇게 확인할 필요없다!!@!@!@
+            return person.flatMap(p -> car.map(c -> findCheapestInsurance(p,c))); //person이 empty이면 바로 empty리턴(flatmap), car가 empty이여도 바로 empty리턴(map)
+          }
+        
+        ```
+      - Optional 클래스와 메서드 정리 (p383)
+        - 사진넣어놓자
+      - Optional을 어디서 사용?
+        - 잠재적으로 null이 될 수 있는 대상을 Optional로 감싸자
+          - map의 get호출시 null에 대한 처리를 다음과같이.. Optional.ofNullable(map.get("key"));
+        - 예외와 Optional 클래스
+          - 아래와 같은 유틸클래스를 만들어두면좋음!
+          ```java
+            public static Optional<Integer> stringToInt(String s){
+              try{
+                return Optional.of(Integer.parseInt(s));
+              }catch(NumberFormatException e){
+                return Optional.empty();
+              }
+            }
+          ```
+  - 12장 - 새로운 날짜와 시간 API
+    - 필요할때 책에서 찾아보자
+  - 13장 - 디폴트 메서드
+    - default라는 키워드로 인터페이스에 정의할수있음
+      - 인터페이스를 구현한 클래스입장에서 구현하지않더라도 인터페이스 자체에서 기본으로 제공해주는 메서드이기때문에 디폴트 메서드라고 함
+    - 자바 8부터 나옴..
+    - 왜나오게 됏나?
+      - 인터페이스에 기능 추가를 했을때, 이를 구현하고있던 모든 구현체들은 인터페이스에 변경된(like 메서드 추가) 부분에 맞추어 변경이 필요했다.. 이에 대한 해결책이 디폴트 메서드!
+      - 즉, 코드 구현을 강제하지않기때문에 기존 구현체와의 호환성을 유지할수있다! 
+    - 추상클래스 vs 자바8의 인터페이스
+      - 공통점
+        - 추상메서드와 바디를 포함하는 메서드를 정의 할 수 있음
+      - 차이점
+        - 클래스는 하나의 추상클래스만 상속받을수 있지만, 인터페이스는 여러개 구현할수있음
+        - 추상 클래스는 인스턴스 변수로 공통 상태를 가질수있지만, 인터페이스는 정적필드만 가질수있고, 인스턴스 변수는 가질수없다!
+    - 여러 인터페이스를 상속받는 등 충돌이 일어날때 해석규칙
+      - 다른 클래스나 인터페이스로부터 같은 시그니처를 갖는 메서드를 상속받을떄는 아래 세가지 규칙에 따른다
+        1. 클래스가 항상 이긴다. 클래스나 슈퍼클래스에서 정의한 메서드가 디폴트 메서드보다 우선됨 (구현한 메서드가 디폴트메서드 보다 항상 우선함!)
+        2. 1번 규칙 이외의 상황에서는 서브 인터페이스가 이긴다. 상속관계를 갖는 인터페이스에서 같은 시그니처를 갖는 메서드를 정의할때는 서브 인터페이스가 이긴다. 즉, B가 A를 상속받는다면 B가 A를 이긴다
+        3. 여전히 디폴트 메서드의 우선순위가 결정되지 않았다면 여러 인터페이스를 상속받는 클래스가 명시적으로 디폴트 메서드를 오버라이드하고 호출해야한다 
+           - 자바 8부터 `X.super.m(...)` 을 사용하여 어떤 인터페이스의 메서드를 사용할것인지 명시할수있음 
+    - 13장을 통한 기타 팁
+      - 여러 기능들이 있는 클래스에 특정 메서드 하나만 바꾸고 싶을때는 상속해서 오버라이딩 하지말고, Proxy를 생각하자!
+  - 14장 - 자바 모듈 시스템
+    - 나중에 시간되면 공부하고 정리할것
+  - 
