--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -637,4 +637,117 @@
       - 여러 기능들이 있는 클래스에 특정 메서드 하나만 바꾸고 싶을때는 상속해서 오버라이딩 하지말고, Proxy를 생각하자!
   - 14장 - 자바 모듈 시스템
     - 나중에 시간되면 공부하고 정리할것
-  - 
+- part 5 개선된 자바동시성
+  - 15장 CompletableFuture와 리액티브 프로그래밍 컨셉의 기초
+    - 외부 API 사용이 증가되고있는 상황에서(MSA인해 더욱이..), API응답을 기다리는 동안 블록되어 자원을 낭비하는것을 피하고자 자바에서는 CompletableFuture(java 8부터)와 리엑티브 프로그래밍 개념을 따르는 Flow API(java 9부터)를 제공한다!
+      - 가능한한 동시에 실행할 수 있는 독립적인 태스크를 가능하게 하면서(***동시성***), 멀티코어 또는 여러 기기를 통해 제공되는 ***병렬성***을 쉽게 이용하는것이 CompletableFuture와 Flow API의 목표! (메모리,cpu 자원 등의 사용극대화!)
+    - 
+    - 15장을 통한 기타 팁
+      - 병렬성 vs 동시성
+        - 병렬성 : 여러 코어에서 여러 스레드로 작업. 멀티스레드라면 당연 동시성도 만족함
+        - 동시성 : 하나의 작업이 끝나는것과 상관없이 다른작업이 함께 진행하는것( ex. 싱글코어에 멀티스레드일때 번갈아가면서 진행되는모습)
+      - 운영체제에서 하나의 어플리케이션을 실행하기 위해서는 하나 이상의 프로세스가 필요하며, 프로세스는 하나 이상의 스레드를 지닌다
+      - Executor와 스레드풀
+        - Executor 프레임워크와 스레드풀을 통해서 자바 프로그래머가 태스크(독립적인 스레드 안에서 동작하도록 만들어진 오브젝트) 제출과 실행을 분리할수있는 기능을 제공!
+        - 스레드 풀에서 사용하지 않은 스레드로 제출된 태스크를 먼저 온 순서대로 실행한다. 이들 태스크 실행이 종료되면 스레드는 풀에 반환된다.. 이 방식을 통해서 하드웨어에 맞는 수의 태스크를 유지함과 동시에 수천개의 태스크를 스레드 풀에 아무 오버헤드 없이 제출할수있다는 장점이있다!
+        - 큐의 크기조정, 거부정책, 태스크 종류에 따른 우선순위 등 다양한 설정가능!
+        - 프로그래머는 태스크(Runnable이나 Callable)를 제공하면 스레드가 이를 실행함!
+        - 스레드 풀 주의사항
+          - 잠을 자거나 I/O를 기다리는 네트워크 연결을 기다리는 태스크가 있다면 주의해야함
+            - 블록 할수잇는 태스크는 스레드 풀에 제출하지 말아야 한다는 것이지만 항상 이를 지킬수없음..ㅠ
+            - 데드락 걸릴수도있다함..
+              - ex. 싱글스레드풀일때, 처음 실행했던 태스크가 해당 태스크내부에 새로운 태스크를 실행시키고 새로운 태스크의 결과를 기다리고 있게된 상황.. (스레드가 부족해서 나타남)
+              ```java
+                public class ThreadDeadLock {
+                  static ExecutorService executorService= Executors.newSingleThreadExecutor();
+                  @Test
+                  void 데드락() throws Exception {
+                      Future<String> f=executorService.submit(new TempCallable());
+                      System.out.println(f.get());
+                  }
+
+                  static class TempCallable implements Callable<String> {
+                      @Override
+                      public String call() throws Exception {
+                          Future<String> future1=executorService.submit(()->{
+                              Thread.sleep(2000);
+                              return "abc";
+                          });
+
+                          return future1.get();
+                      }
+                  }
+              }
+              ```
+          - 프로그램을 종료하기 전에 모든 스레드 풀을 종료해야함 
+            - 제대로 종료하지않으면 살아있는 스레드가 남아있어서 어플리케이션 종료가 안될수있음
+      - 비동기메서드
+        - 메서드가 반환된 후에도 메서드 호출로 만들어진 태스크 실행이 계속되는 메서드를 비동기 메서드라함
+        - 주의사항
+          - 스레드 실행은 메서드를 호출한 다음의 코드와 동시에 실행되므로 데이터 경쟁 문제를 일으키지 않도록!
+          - 어플리케이션 종료전에 애플리케이션에서 만든 모든 스레드를 추적하고 스레드 풀을 포함한 모든 스레드를 종료할것!
+            
+  - 16장
+  - 17장 리엑티브 프로그래밍
+    - 리엑티브 프로그래밍은 빅데이터환경 및 빠른 반응속도를 원하는 소비자의 니즈를, 다양한 시스템과 소스에서 들어오는 데이터 항목 스트림을 비동기적으로 처리하고 합쳐서 충족시켜줌
+      - 리엑티브 스트림을 사용하는 프로그래밍으로 정의할수도 있음..
+    - [리엑티브 매니패스토(reactive manifesto)](https://www.reactivemanifesto.org/ko)
+      - 반응성
+        - 시스템은 가능한한 적정 시간안에 반응한다.. 반응성이 뒷받침되어야 사용성을 높일수 있음
+      - 회복성
+        - 장애가 발생해도 시스템은 반응해야함
+        - 시스템의 반응성을 유지
+        - 컵포넌트 실행복제, 여러 컴포넌트의 시간(발송자와 수신자가 독립적인 생명주기를 가지도록..)과 공간(발송자와 수신자가 다른 프로세스에서 실행)을 분리, 각 컴포넌트가 비동기적으로 작업을 다른 컴포넌트에 위임 등 회복성을 달성하기위한 다양한 방법이 있음 
+      - 탄력성
+        - 다양한 작업 부하에서도 시스템이 반응성을 유지하도록 해줌
+        - 작업부하 발생하면 이에따라 자원의 수를 늘리는 행동을 통해서..
+        - (리엑티브 스트림에서는 subscription을 통해서 가능한듯..?)
+      - 메시지 주도
+        - 컴포넌트간의 약한 결합, 고립, 위치투명성이 유지되도록 시스템은 비동기 메세지 전달에 의존
+        - 비동기 메세지를 전달하여 컴포넌트 끼리의 통신이 이루어짐으로써, 회복성(장애를 메세지로 처리)과 탄력성(주고받은 메세지의 수를 감시하고 메시지의 양에 따라 적절하게 리소스를할당)을 얻을수있음
+      - *다양한 크기의 애플리케이션 상황에 적용할수있다!
+    - 애플리케이션 수준의 리엑티브 (p536 참고..)
+      - 비동기로 작업을 수행함으로써 멀티코어 CPU 사용률을 극대화할수있다!
+      - 이런 목표를 달성할수잇도록 리엑티브 프레임워크들이 있는데, 이런 프레임워크들을 통해 동시, 비동기 애플리케이션 구현을 위해 저수준의 멀티스레드 문제를 직접 처리할 필요가 없어지고 요구사항에만 집중하여 개발가능
+      - 암튼 리엑티브 프로그래밍 구현의 핵심은 모든 프로세스를 비동기로 구현하여 컴퓨팅 자원을 효율적으로 활용함과 동시에, back pressure를 통해서 과부하를 막을수있도록 해주는것!
+    - 시스템 수준의 리엑티브 (p538 참고..)
+      - 여러 애플리케이션이 한 개의 일관적인, 회복할 수 있는 플랫폼을 구성할수있게 해줄뿐아니라, 이들 애플리케이션 중 하나가 실패해도 전체 시스템은 계속 운영될 수 있도록 도와주는 소프트웨어 아키텍처!
+      - 애플리케이션을 조립하고 상호소통을 조절
+        - 애플리케이션 수준의 리엑티브는 짧은 시간 동안만 유지되는 데이터 스트림에 기반한 연산을 수행하고, 이벤트 주도로 진행..
+        - 메세지주도는 정의된 목적지 하나를 향하는반면, 이벤트는 관련 이벤트를 관찰하도록 등록한 컴포넌트가 수신한다는 점이 다름
+          - 리엑티브 시스템에서는 수신자와 발신자가 각각 수신메세지, 발신메세지와 결합하지 않도록 이들메세지를 비동기로 처리해야함 (발신자나 수신자나 모두 block되어 기다리는게 없어야한다는걸 이야기하는듯..? )
+          - 비동기를 통해 컴포넌트간의 고립을 극대화할수있고, 이를 통해서 시스템이 장애와 높은 부하에서도 반응성을 유지할수있다
+    - [리엑티브 시스템 vs 리엑티브 프로그래밍](https://www.hanbit.co.kr/media/channel/view.html?cms_code=CMS6076376207)
+      - http://blog.lespinside.com/reactive-programming-versus-reactive-systems/
+    - 리엑티브 스트림
+      - 무한의 비동기 데이터를 순서대로, 그리고 블록하지않는 역압력을 전제해 처리하는 표준기술..(정확하게 뭔소리인지..)
+        - 역압력(back pressure)은 이벤트 스트림의 구독자가 이벤트 발행자의 속도보다 느린 속도로 이벤트를 소비하면서 문제가 발생하지 않도록 보장하는 장치임(비동기 API를 사용하니깐 매우 빠른데, 그로인해 다운스트림중에 처리가 느린놈에게는 큰 부하가 갈수있음)
+          - 부하가 잇는 컴포넌트는 업스트림 발행자에게 더이상 이벤트를 수신할수없다거나 늦추라고 알릴수있다(subscription의 request를 통해서 가능한듯?)
+          - 참고로 이벤트처리는 비동기를 사용함이 기본전제
+      - 리엑티브 스트림을 구현하기위해서는 몇몇 회사들이 참여한 리엑티브 프로젝트에서 제공한 4개의 인터페이스를 사용하여야한다! (이런 인터페이스들을 구현한것이 RxJava, 리엑티브 프레임워크)
+        - 너무 자기네방식으로 만들면 나중에 호환성 문제로 어려움을 겪을수있기에..
+        - `Publisher<T> (함수형인터페이스)`
+        - `Subscriber<T>`
+        - `Subscription`
+        - `Processor<T,R> extends Subscriber<T>, Publisher<T>`
+          - 리엑티브 스트림에서 처리하는 이벤트의 변환 단계를 나타냄.. (Processor는 중간에 대리자와같은느낌의 역할.. 중간중간에 map과 같은 데이터를 가공해야할때 이를 사용하는듯..?)
+          - Processor가 에러를 수신하면, 이로부터 회복하거나 즉시 onError 신호로 모든 Subscriber에 에러를 전파할수잇음.. 또한 마지막 Subscriber가 Subscription을 취소하면 Processor는 자신의 업스트림 Subscription도 취소함으로 취소신호를 전파
+        - 위 4개의 인터페이스들이 어떻게 상호작용하는지 정의
+          - Publisher는 반드시 Subscription의 request 메서드에 정의된 개수 이하의 요소만 Subscriber에 전달해야한다. 하지만 Publisher는 지정된 개수보다 적은 수의 요소를 onNext로 전달할 수 있으며 동작이 성공적으로 끝났으면 onComplete를 호출하고 문제가 발생하면 onError를 호출해 subscription을 종료할 수 있다
+          - Subscriber는 요소를 받아 처리할 수 있음을 Publisher에 알려야한다. 이런 방식으로 Subscriber는 Publisher에 역압력을 행사할수 있고, Subscriber가 관리할수 없이 너무 많은 요소를 받는 일을 피할 수 있다. 더욱이 onComplete나 onError 신호를 처리하는 상황에서 Subscriber는 Publisher나 Subscription의 어떤 메서드도 호출할 수 없으며 Subscription이 취소되었다고 가정해야한다. <span style="color:yellow">마지막으로 Subscriber는 Subscription.request() 메서드 호출이 없이도 언제든 종료 시그널을 받을 준비가 되어있어야하며 Subscription.cancel()이 호출된 이후에라도 한 개 이상의 onNext를 받을 준비가 되어 있어야한다 </span>
+          - <span style="color:yellow"> Publisher와 Subscriber는 정확하게 Subscription을 공유해야하며 각각이 고유한 역할을 수행해야한다. 그러려면 onSubscribe와 onNext메서드에서 Subscriber는 request메서드를 동기적으로 호출할 수 있어야한다. 표준에서는 Subscription.cancel() 메서드는 몇번을 호출해도 한 번 호출한 것과 같은 효과를 가져야 하며, 여러 번 이 메서드를 호출해도 다른 추가 호출에 별 영향이 없도록 스레드에 안전해야 한다고 명시한다. 같은 Subscriber 객체에 다시 가입하는 것은 권장하지 않지만 이런 상황에서 예외가 발생해야한다고 명세서가 강제하진 않는다. 이전의 취소된 가입이 영구적으로 적용되었다면 이후의 기능에 영향을 주지 않을 가능성도 있기 때문이다. </span>
+      - 아래 정의된 순서로 메서드를 호출해야함!(약속!)
+        - `onSubscribe onNext* (onError | onComplete)`
+          - onSubscribe가 항상 처음 호출되고
+          - onNext가 여러번 호출가능 (영원히 지속되면 여기서 끝나겠지)
+          - 더이상 데이터가 없어서 완료되었으면 onComplete 로 끝 또는, 장애가 났을때는 onError로 끝 (둘중 하나 호출하면 종료이다)
+          - Publisher는 onSubscribe를 호출할때 Subscription을 subscriber에게 전달해준다
+            - Subscription은 Publisher와 Subscriber 사이의 제어흐름, back pressure를 관리
+      - 리엑티브 애플리케이션의 평범한 생명주기 그림 <span style="color:yellow">그림넣자!</span>
+      
+      - 무한으로 발행시 주의점
+        - request와 onNext를 재귀적으로 계속 호출하게되면, 스택오버플로우 exception이 떨어진다! 이를 막기위해서는 request에서 스레드풀에 task를 제출하는 방법을 사용하면된다!(request가 계속 onNext를 호출하여 뻉뻉이 돌지않고, request가 스레드풀에 task를 제출하면 끝!)
+      - RxJava
+        - Reactive Extensions(Rx) 프로젝트의 일부로 시작
+        - Reactive Streams API와 java 9에 적용된 Flow를 지원하도록 RxJava2.0이 개발
+          - Observable은 역압 사용불가, Flowable은 역압 사용가능
