공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -641,7 +641,23 @@
   - 15장 CompletableFuture와 리액티브 프로그래밍 컨셉의 기초
     - 외부 API 사용이 증가되고있는 상황에서(MSA인해 더욱이..), API응답을 기다리는 동안 블록되어 자원을 낭비하는것을 피하고자 자바에서는 CompletableFuture(java 8부터)와 리엑티브 프로그래밍 개념을 따르는 Flow API(java 9부터)를 제공한다!
       - 가능한한 동시에 실행할 수 있는 독립적인 태스크를 가능하게 하면서(***동시성***), 멀티코어 또는 여러 기기를 통해 제공되는 ***병렬성***을 쉽게 이용하는것이 CompletableFuture와 Flow API의 목표! (메모리,cpu 자원 등의 사용극대화!)
-    - 
+    - 동기API를 비동기로 변경할수잇는데, 이를 위해 두가지 방법을 고려해볼수있음
+      - 리액티브 형식 API
+        - 스트림같이 연결되어서 사용하는 일련의 값을 처리하는데 적합
+      - Future 사용
+        - 일회성의 값을 처리하는데 적합
+        - java8에서 제공하는 CompletableFuture를 사용해서 좀더 풍부한 기능 사용가능 (이거 사용하면 일련의 값을 처리할수도있으므로 리액티브 형식 API의 장점을 활용할수있을듯..?)
+          - CompletableFuture는 실행할 코드 없이 Future를 만들수있도록 허용하며(껍데기를 만드는느낌.. Callable과같이 call메서드에 필요한작업을 필수적으로 넣어줄 필요가 없다!) complete메서드를 이용해 다른 스레드가 작업을 완료하여 값을 넣어주면, get으로 값을 얻을수 있도록해준다.. 
+          - CompletableFuture와 콤비네이터를 이용해 각 연산의 결과를(Future로 되어있겠지) get으로 하나씩 가져오면서 계속적으로 block되거나, 콜백 지옥을 피할수있다!
+      - => 계산이 오래걸리거나, 네트워크 또는 사람의 입력을 기다리는 메서드에 비동기 API를 사용하면 애플리케이션의 효율성이 크게 향상됨..
+      - => block 시킴으로 스레드 자원을 점유하지마라!
+        - 예를들어, A라는 메서드가 실행되고 B라는 메서드를 2초뒤에 실행되어야한다고하면, A와 B사이에 Sleep을 주어서 스레드 자원을 점유해버리지 말고, A라는 메서드를 실행한뒤에 2초뒤에 B메서드를 실행하라는 스케줄러를 사용하여 스레드를 block 시키지마라!(스레드 대신 그냥 메모리를 좀더 사용했을뿐..)
+        - 즉, 다음작업을 태스크로 제출하고 현재태스크는 종료하여서 해당 태스크를 돌렸던 스레드를 풀로 돌려주는게 좋음!
+    - 리엑티브 프로그래밍(pub-sub 모델)
+      - 발행-구독 모델의 리엑티브 프로그래밍은 구독자가 여러 발행자를 구독할수있기때문에, 실시간으로 여러 파이프라인의 결과를 합치는데 유리하다(반대로 발행자하나에 각자 구독스타일에맞추어 구독자가 여럿있을수있으니 분리하는데도 유용)
+        - 스트림은 결과값을 input으로 만들어주어 선형적인 파이프라인처리에 좋지만, 두 파이프라인의 결과를 합치거나 분리하기가 어렵다(스트림 내부의 병렬처리 작업을 진행하는것과는 다른개념인듯함..)  
+      - 또한 한번의 결과만 받고 끝내는 future와 달리 특정이벤트에 발생에 따라 결과를 지속적으로 받아야할때 좋다
+      - 이런 모델을 java9부터 Flow API를 통해 구현하였다
     - 15장을 통한 기타 팁
       - 병렬성 vs 동시성
         - 병렬성 : 여러 코어에서 여러 스레드로 작업. 멀티스레드라면 당연 동시성도 만족함
@@ -681,13 +697,44 @@
               ```
           - 프로그램을 종료하기 전에 모든 스레드 풀을 종료해야함 
             - 제대로 종료하지않으면 살아있는 스레드가 남아있어서 어플리케이션 종료가 안될수있음
+
       - 비동기메서드
         - 메서드가 반환된 후에도 메서드 호출로 만들어진 태스크 실행이 계속되는 메서드를 비동기 메서드라함
         - 주의사항
           - 스레드 실행은 메서드를 호출한 다음의 코드와 동시에 실행되므로 데이터 경쟁 문제를 일으키지 않도록!
           - 어플리케이션 종료전에 애플리케이션에서 만든 모든 스레드를 추적하고 스레드 풀을 포함한 모든 스레드를 종료할것!
-            
-  - 16장
+      
+  - 16장 CompletableFuture : 안정적 비동기 프로그래밍
+    - Future의 제한점..
+      - Future는 간결하면서 동시실행가능한 코드를 구현하기에 충분하지못함..
+    - 어떤상황에서 CompletableFuture가 필요할까?
+      - 두개의 비동기 계산 결과를 하나로 합칠때.. 두가지 계산 결과는 서로 독립적일 수 있으며, 두번째 결과가 첫번째 결과에 의존할수있음
+      - Future 집합이 실행하는 모든 테스크의 완료를 기다림
+      - Future 집합에서 가장 빨리 완료되는 태스크를 기다렸다가 결과를 얻음(여러 태스크가 다양한 방식으로 같은 결과를 구하는상황..)
+      - 프로그램적으로 Future를 완료(비동기 동작에 수동으로 결과제공)
+      - Future 완료동작에 반응(결과 기다리면서 블록되지않고, 결과가 준비되었따는 알림을 받은 다음에 Future의 결과로 원하는 추가동작을 수행)
+    - CompletableFuture를 사용함으로써 얻을수 있는것?
+      - 비동기 API 제공가능
+      - 동기 API를 사용해야할때 코드를 넌블럭으로 만들수있음
+      - 비동기 동작의 완료에 대응 
+    - CompletableFuture 메서드 특징
+      - 접미어에 Async가 있다면, 다음 작업이 다른 스레드에서 실행되도록 스레드 풀로 작업을 제출 (스레드 전환비용이 있으니, 잘 고려해서 사용할것!)
+      - 접미어에 Async가 없다면, 이전 작업을 수행한 스레드와 같은 스레드에서 작업을 실행 
+    - 16장을 통한 기타팁
+      - 동기 API vs 비동기 API
+        - 동기 API : 메서드를 호출한 다음에 메서드가 계산을 완료할 떄까지 기다렸다가 메서드가 반환되면 호출자는 반환된 값으로 계속 다른 동작을 수행(반환된 값을 받을때까지 기다려야한다는게 핵심.. 그렇기떄문에 블록호출이라고도함)
+        - 비동기 API : 메서드가 즉시 반환되며 끝내지 못한 나머지 작업을 호출자 스레드와 다른 스레드에 할당. 다른 스레드에 할당된 나머지 계산 결과는 콜백메서드를 호출해서 전달하거나, 호출자가 '계산 결과가 끝날때까지 기다림' 메서드(여기에 블락이 될수있음)를 추가로 호출하면서 전달
+      - ***적정 스레드풀 크기***
+        - `적정 스레드수 = 코어수 * CPU활용비율 * (1 + 대기시간/계산시간)`
+          - CPU활용비율은 0~1사이의 값이며, 90%의 CPU활용을 하고싶다면, 0.9를 대입하면됨
+          - 대기시간/계산시간 은 어떤 API호출에 대기시간이 50ms 걸리고, 계산시간이 5ms 라면 50/5 로 계산하면됨
+          - 예를들어, 멀티코어에 CPU 활용률이 90프로이고 별도 스레드로 호출하고자하는 메서드 기능이 API호출하여 계산작업이 진행될때(API 응답시간이 50ms, 계산작업이 5ms)
+            - 2 * 0.9 * (1+ 50/5) = 19.8 즉, 적정 스레드 개수는 19개임
+          - IO작업과 같은 blocking에 소요되는 시간이 많다면 스레드수를 높이는게좋고! 그렇지않다면 코어갯수에 맞추어서 진행하자(스레드가 무조건 많다고 좋은게아님.. 컨텍스트 스위칭비용이 들어간다..)
+          - *참고로 `서버의 적절한 TPS = 스레드풀 크기 / 평균응답시간(초)` 로 구할수있음!
+      - 스트림병렬화 vs Completable병렬화
+        - IO가 포함되지않은 계산 중심의 동작을 실행할때는 스트림 인터페이스가 가장 구현하기 간단하며 효율적!(계산작업을 수행할때는 코어 수 이상의 스레드를 가질필요가없으니!)
+        - IO를 기다리는 작업을 병렬로 실행할때는 CompletableFuture가 더 많은 유연성을 제공하기에 좋음! 대기시간/계산시간의 비율에 적합한 스레드수를 설정할수있다!
   - 17장 리엑티브 프로그래밍
     - 리엑티브 프로그래밍은 빅데이터환경 및 빠른 반응속도를 원하는 소비자의 니즈를, 다양한 시스템과 소스에서 들어오는 데이터 항목 스트림을 비동기적으로 처리하고 합쳐서 충족시켜줌
       - 리엑티브 스트림을 사용하는 프로그래밍으로 정의할수도 있음..
