공부한 내용추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -1317,6 +1317,7 @@
       - @Async
         - 비동기 사용시, 적절한 ThreadPool 지정은 필수!(디폴트 노노)
         - *리턴타입은 void 또는 Future 타입, 태스크 실행기 등록필요
+        - 스레드 풀을 여러개 만들고 특정 스레드풀을 지정해서 사용하고싶다면 @Async("스레드풀 등록한 빈 이름") 으로 지정가능
     - ThreadPoolTaskExecutor 사용방법 확인
       - pool이나 queue가 어떻게사용되고, pool은 어떻게 증가되는지, 적절한 스레드 풀 사이즈 등
       - ThreadPoolTaskExcecutor 이 현재 기본값임
