--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -345,7 +345,7 @@
           - mapping
           - flatMapping
           - groupingBy
-            - Map\<key1, Map\<key2, List\<Dish\>\>\> 이런 형식으로 나옴
+            - `Map<key1, Map<key2, List<Dish>>>` 이런 형식으로 나옴
           ```java
             groupingBy(Dish::getType
                         , filtering(d -> d.getCount()>5, toList())
@@ -720,6 +720,54 @@
     - CompletableFuture 메서드 특징
       - 접미어에 Async가 있다면, 다음 작업이 다른 스레드에서 실행되도록 스레드 풀로 작업을 제출 (스레드 전환비용이 있으니, 잘 고려해서 사용할것!)
       - 접미어에 Async가 없다면, 이전 작업을 수행한 스레드와 같은 스레드에서 작업을 실행 
+      - 비동기 태스크들의 결과를 하나로 합쳐야할때는 thenCombine을 사용할수있다
+        - java 8 이전의 Future로도 구현이 가능하지만, 코드가 지저분해진다.. 
+      - thenAccept를 통해서 실시간으로 작업 완료한 데이터를 소비하도록 할 수 있음
+      - java 9 부터는 orTimeout 메서드를 통해서 비동기 타임아웃을 관리할수있다!
+        - completeOnTimeout은 지정한 시간안에 결과가 나오지않으면 default 값을 셋팅하여 계속해서 진행할수있다
+        - completeOnTimout, orTimeout모두 CompletableFuture를 반환하기때문에 체이닝을 계속해서 이어나갈수있음!
+        - `CompletableFuture.allOf(CompletableFuture...).join()` 을 사용하면, CompletableFuture의 모든 실행 완료를 기다린다.. 이를 활용하여 진행한 모든작업이 끝났거나 타임아웃되었음을 알릴수있음
+          - anyOf는 `CompletableFuture<Object>` 를 반환하게되는데, 처음으로 완료한 CompletableFuture의 값을 가져온다(만약 thenAccept를 사용했다면 Void가 넘어오겟지)
+          
+        - java 8 에서는 아래와 같은 느낌으로 구현할수있음
+        ```java
+          private static final ScheduledExecutorService schedulerExecutor = 
+                                 Executors.newScheduledThreadPool(10);
+          private static final ExecutorService executorService = 
+                                          Executors.newCachedThreadPool();
+
+          public static <T> CompletableFuture<T> supplyAsync(
+                  final Supplier<T> supplier, long timeoutValue, TimeUnit timeUnit,
+                  T defaultValue) {
+
+              final CompletableFuture<T> cf = new CompletableFuture<T>();
+
+              // as pointed out by Peti, the ForkJoinPool.commonPool() delivers a 
+              // ForkJoinTask implementation of Future, that doesn't interrupt when cancelling
+              // Using Executors.newCachedThreadPool instead in the example
+              // submit task
+              Future<?> future = executorService.submit(() -> {
+                  try {
+                      cf.complete(supplier.get());
+                  } catch (Throwable ex) {
+                      cf.completeExceptionally(ex);
+                  }
+              });
+
+              //schedule watcher
+              schedulerExecutor.schedule(() -> {
+                  if (!cf.isDone()) {
+                      cf.complete(defaultValue);
+                      future.cancel(true);
+                  }
+
+              }, timeoutValue, timeUnit);
+
+              return cf;
+          }
+
+          //출처 : https://stackoverflow.com/questions/23575067/timeout-with-default-value-in-java-8-completablefuture/39036944
+        ```
     - 16장을 통한 기타팁
       - 동기 API vs 비동기 API
         - 동기 API : 메서드를 호출한 다음에 메서드가 계산을 완료할 떄까지 기다렸다가 메서드가 반환되면 호출자는 반환된 값으로 계속 다른 동작을 수행(반환된 값을 받을때까지 기다려야한다는게 핵심.. 그렇기떄문에 블록호출이라고도함)
@@ -798,3 +846,57 @@
         - Reactive Extensions(Rx) 프로젝트의 일부로 시작
         - Reactive Streams API와 java 9에 적용된 Flow를 지원하도록 RxJava2.0이 개발
           - Observable은 역압 사용불가, Flowable은 역압 사용가능
+
+- part 6 - 함수형 프로그래밍과 자바 진화의 미래 <span style="color:yellow"> 여기는 나중에 꼭 다시 볼것 </span>
+  - 18장 함수형 관점으로 생각하기
+    - 함수형 프로그래밍은 선언형 프로그래밍을 따르고, 부작용이 없는 계산을 지향하는 프로그래밍방식
+      - "선언형"
+        - 자연스럽게 읽고 쓸수 잇는 코드를 구현할수있도록 해줌
+        - 질의문을 통한 "무엇을"에 집중
+          - 구현은 라이브러리가 알아서!
+          - 내부반복사용!
+        - 선언형을 우리가 원하는 것이 무엇이고 시스템이 어떻게 그 목표를 달성할 것인지 등의 규칙을 정한다. 문제 자체가 코드로 명확하게 보임!
+        - 명령형 vs 선언형
+          - 명령형 : "어떻게"에 집중하는 프로그래밍형식.. 할당, 조건문, 분기문, 루프 등 명령어가 컴퓨터의 저수준언어와 비슷하기 때문에 이렇게 부른다함
+            
+      - "부작용이 없는"
+        - 부작용이란?
+          - 자료구조를 고치거나 필드에 값을 할당
+          - 예외발생
+          - 파일에 쓰기 등의 IO 동작수행
+        - 자신을 포함하는 클래스의 상태 그리고 다른 객체의 상태를 바꾸지않으며 return문을 통해서만 자신의 결과를반환..
+        - 동일한 인수면, 항상 같은 결과를 반환하는것!
+    - 왜 함수형 프로그래밍?
+      - 쉽게 시스템을 구현하고 유지보수하는데 도움을준다!
+      - 작업을 조합하거나 동작을 전달하는 등의 언어기능은 선언형을 활용해서 자연스럽게 읽고 쓸 수 있는 코드를 구현하는데 많은 도움을줌
+    - 자바로는 완벽한 순수 함수형 프로그래밍 구현이 어려움..(IO모델 자체에는 부작용 메서드가 포함.. Scanner.nextLine을 두번 호출하면 당연 다른결과 반환..) 그렇기떄문에 함수형 프로그램을 구현
+      - 방법
+        - 함수나 메서드는 지역변수만을 변경해야 함수형이라 할수있음
+          - 만약 참조하는 객체가 있다면 불변객체이어야함
+          - 메서드 내부적으로 객체를 생성하고 필드를 변경한것이 외부에 노출되지않으면 괜춘
+        - 함수형이라면 함수나 메서드가 어떤 예외도 일으키지않아야한다..
+          - 대신, 예외가 발생한것은 Optional로 처리해서 가능하도록
+        - 비함수형 동작을 감출수 있는 상황에서만 부작용을 포함하는 라이브러리 함수를 사용해야함
+          - 에러날수있는 상황을 대비해서 적절한 조치를 취하여 함수형이 되도록하라!
+      - 참조투명성(referential transparency)
+        - 같은 인수로 함수를 호출했을때 항상 같은 결과를 반환한다면 참조적으로 투명한 함수라고함
+        - 이런 참조투명성은 비싸거나 오랜시간이 걸리는 연산을 ***기억화*** 또는 ***캐싱***을 통해 다시 계산하지 않고 저장하는 최적화 기능으 ㄹ제공
+    - 18장을 통한 기타팁
+      - 순수 함수형 프로그래밍 vs 함수형 프로그래밍
+        - 순수 함수형 프로그래밍 : 함수 그리고 if-then-else 등의 수학적 표현만 사용하는 방식 (ex. 수학적인표현과 같이 특정 숫자에 log를 씌우면 값이 언제나 똑같다)
+        - 함수형 프로그래밍 : 시스템의 다른 부분에 영향을 미치지 않는다면 내부적으로는 함수형이 아닌 기능도 사용하는것!
+      - 재귀를 사용할때는 고전방식의 재귀보다는 꼬리 재귀를 사용해야 추가적인 컴파일러 최적화를 기대할수있다함..
+        ```java
+            @Test
+            void 팩토리얼_재귀_꼬리최적화(){
+                System.out.println(factorialTailRecursive(30));
+            }
+
+            static long factorialTailRecursive(int n){
+                return factorial_tail(1,n);
+            }
+
+            private static long factorial_tail(long accumulator,int i){
+                return i==1 ? accumulator : factorial_tail(accumulator*i,--i); //factorial_tail에 아무런 연산도 붙지않는 방식이 꼬리재귀인데, 자바에서 테스트해봣을떄 그냥 재귀랑 꼬리재귀의 성능에 차이를 못봣음..
+            }
+        ```
