공부한거 추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -263,3 +263,11 @@
   https://frontierdev.tistory.com/93#:~:text=%EC%BA%A1%EC%8A%90%ED%99%94%EC%99%80%20%EC%A0%95%EB%B3%B4%EC%9D%80%EB%8B%89%EC%9D%98,%EC%99%B8%EB%B6%80%EC%97%90%20%EC%88%A8%EA%B8%B0%EB%8A%94%20%EC%9E%A5%EC%B9%98%EC%9D%B4%EB%8B%A4.&text=%EC%9E%90%EB%B0%94%EC%9D%98%20%EC%BA%A1%EC%8A%90%ED%99%94%20%EA%B5%AC%ED%98%84%EC%9D%80,%EC%A0%95%EB%B3%B4%EC%9D%80%EB%8B%89%EC%9D%84%20%EA%B5%AC%ED%98%84%ED%95%9C%EB%8B%A4.
 
   https://yongdev.tistory.com/131
+
+  - visitor 패턴
+    - 방문자(Visitor)에 각 (연관이 매우 깊은)객체(Element)들의 행동을 정의하고 Element가 accpet메서드(일반적으로 accept쓴다함)를 통해서 방문자를 넘겨받으면 이를 수행..  
+    - 콜백 패턴의 변형느낌..
+    - 언제 쓰나?
+      - 적용해야 할 대상 객체가 잘 바뀌지 않고(특히 개수), 적용할 알고리즘이 추가될 가능성이 많은 상황일 때 사용을 고려해봐야 한다. 다시 말하면 Member 등급은 Gold, Vip, Green 으로 고정이거나 추가될 가능성이 작으면서 혜택은 앞으로 계속해서 추가될 가능성이 있을 때를 말한다. 왜냐하면 Member가 추가되면 모든 Benefit 클래스를 수정해야 하기 때문이다.
+      - 또한 대상 객체가 가지는 동작과 객체를 분리해 코드의 응집도를 높이고자 할 때 사용할 수 있다. 멤버별 혜택에 대한 로직을 보기 위해서는 Benefit의 구상 클래스만 보면 쉽게 파악할 수 있다.
+    - 정리굿 : https://thecodinglog.github.io/design/2019/10/29/visitor-pattern.html
