--- a/정규표현식.md
+++ b/정규표현식.md
@@ -1,6 +1,119 @@
 - 정규표현식
 
+- 정규표현식 확인을 위한 사이트 : https://regexr.com/5mhou
+- 정규표현식 예제 풀어볼수있는 사이트 : https://regexone.com/lesson/end?
+
 아래 정리매우잘되어있음! 나중에 한번 공부해보자
 https://soooprmx.com/archives/7718
 
 - 좀더 쉽게 되어있음 : https://naudhizb.tistory.com/857
+- https://medium.com/depayse/java-%EC%A0%95%EA%B7%9C-%ED%91%9C%ED%98%84%EC%8B%9D-regular-expression-%EC%9D%98-%EC%9D%B4%ED%95%B4-31419561e4eb
+
+```java
+    @Test
+    void testRegEx(){
+        String regEx="(?:https?:\\/\\/)?(?:www\\.)?youtu.be\\/([-\\w]+)";
+
+        Pattern compile = Pattern.compile(regEx);
+
+        String target1="https://www.youtu.be/-ZClicWm0zM";
+        String target2="https://youtu.be/-ZClicWm0zM";
+        String target3="youtu.be/-ZClicWm0zM";
+        String multi="https://www.youtu.be/-ZClicWm0zM https://youtu.be/-sdfzM youtu.be/-ccccM";
+
+        Matcher matcher = compile.matcher(multi);
+        assertTrue(matcher.lookingAt()); //matcher.lookingAt() => "^[Pattern]" , 앞에가 일치해야하기 때문에 하나만나옴!
+        System.out.println(matcher.group(1));
+
+        Matcher matcher2 = compile.matcher(multi);
+        while(matcher2.find()){ //matcher.find() => "[Pattern]" , 이렇기때문에 find는 패턴이 일치하는게 여러개 나올수있음! 그래서 find 호출하면 다음 일치하는걸로 넘어간다!
+            System.out.println(matcher2.group(1));
+        }
+
+        Matcher matcher3 = compile.matcher(target1);
+        assertFalse(matcher3.matches());//matcher.matches() => "^[Pattern]$" , 앞에서 뒤까지 모두 일치해야하니깐 하나밖에 안나온다고 생각해서 그런지 다음 일치하는걸로 넘어가는 find와 같이 while문 돌리면 무한루프..(위 lookingAt도 마찬가지)
+
+    }
+
+
+```
+- 여담..
+  - string에 matches를 바로 사용가능하나, 성능상 좋지않다고함~ 자주쓰이는 정규식 패턴을 static final Pattern으로 놓고 쓰는게 성능상좋다고함!
+
+---
+
+## 문법 정리
+
+### Groups and ranges
+
+| Chracter | 뜻                                     |
+| -------- | -------------------------------------- |
+| `\|`     | 또는                                   |
+| `()`     | 그룹                                   |
+| `[]`     | 문자셋, 괄호안의 어떤 문자든           |
+| `[^]`    | 부정 문자셋, 괄호안의 어떤 문가 아닐때 |
+| `(?:)`   | 찾지만 기억하지는 않음                 |
+
+### Quantifiers
+
+| Chracter    | 뜻                                  |
+| ----------- | ----------------------------------- |
+| `?`         | 없거나 있거나 (zero or one)         |
+| `*`         | 없거나 있거나 많거나 (zero or more) |
+| `+`         | 하나 또는 많이 (one or more)        |
+| `{n}`       | n번 반복                            |
+| `{min,}`    | 최소                                |
+| `{min,max}` | 최소, 그리고 최대                   |
+
+### Boundary-type
+
+| Chracter | 뜻               |
+| -------- | ---------------- |
+| `\b`     | 단어 경계        |
+| `\B`     | 단어 경계가 아님 |
+| `^`      | 문장의 시작      |
+| `$`      | 문장의 끝        |
+
+### Character classes
+
+| Chracter | 뜻                           |
+| -------- | ---------------------------- |
+| `\`      | 특수 문자가 아닌 문자        |
+| `.`      | 어떤 글자 (줄바꿈 문자 제외) |
+| `\d`     | digit 숫자                   |
+| `\D`     | digit 숫자 아님              |
+| `\w`     | word 문자                    |
+| `\W`     | word 문자 아님               |
+| `\s`     | space 공백                   |
+| `\S`     | space 공백 아님              |
+
+- 출처 : https://github.com/dream-ellie/regex
+
+
+--- 
+
+
+- 패턴 일치부분 활용, 치환 - $1, $2, ... 사용
+
+  - "나는 개입니다" 를 "개는 나입니다" 로 바꿔보자
+    ```java
+            for(String s : as ) {
+                System.out.println(s.replaceAll("(.*)는 (.*)입니다", "$2는 $1입니다"));
+            }
+    ```
+
+  - 캡쳐된 그룹은 Matcher#group(i) 로 가져왔지만, $1, $2 로도 표현 가능
+  - 따라서 group(1) = $1 = 나 
+  - group(2) = $2 = 개 or 새 ... 등이므로 "$2는 $1입니다" 는 "개는 나입니다" 가 됨
+
+- 그룹에 이름 지정 가능
+    ```java
+            for(String s : as ) {
+                System.out.println(s.replaceAll("(.*)는 (?<animal>.*)입니다", "${animal}는 $1입니다"));
+            }
+    ```
+
+  - (?<이름>) 으로 그룹의 이름을 지정하며, 가져다 쓸때는 ${이름} 또는 Matcher#group(이름) 으로 사용 가능함.
+  - https://stackoverflow.com/questions/415580/regex-named-groups-in-java
+
+[출처](https://dogcowking.tistory.com/230) 
