공부한거 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -321,7 +321,7 @@
         - generate
           - Supplier\<T\> 를 인수로 받아서 새로운 값을 생산
           - 병렬작업시 Supplier에는 상태값이 있으면 안전하지않다!!
-    - 6장 스트림으로 데이터 수집
+  - 6장 스트림으로 데이터 수집
     - collect에 다양한 요소 누적 방식을 인수로 받아서 스트림을 최종결과로 도출하는 리듀싱연산을 수행할수 있음(Collector를 인수로받음.. Collector는 인터페이스이고 Collectors는 Collector의 구현체들을 모아놓은 클래스)
     - collect는 요소한개씩 가져와서 파라미터로 받은 동작을 수행하도록 해준다(리듀싱 연산)
       - collect로 결과를 수집하는 과정을 간단하면서도 유연한 방식으로 정의할수있도록 해주는것이 컬렉터! 이 컬렉터를 통해 동작파라미터화가 가능!
@@ -900,3 +900,8 @@
                 return i==1 ? accumulator : factorial_tail(accumulator*i,--i); //factorial_tail에 아무런 연산도 붙지않는 방식이 꼬리재귀인데, 자바에서 테스트해봣을떄 그냥 재귀랑 꼬리재귀의 성능에 차이를 못봣음..
             }
         ```
+
+
+---
+
+- stream 으로 sum하는 여러 방법 : https://www.baeldung.com/java-stream-sum
