--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -87,7 +87,7 @@
 
   - 스프링의 IoC
     - 오브젝트 팩토리를 이용한 스프링 IoC
-      - 스프링 빈 : 스프링 컨테이너가 생성, 관계설정, 사용 등을 제어해주는 제어의 역전이 적용된 오브젝트 (메소드에 @bean을 통해서 등록할때 메소드이름이 빈 이름이다)
+      - 스프링 빈 : 스프링 컨테이너가 생성, 관계설정, 사용 등을 제어해주는 ***제어의 역전이 적용***된 오브젝트 (메소드에 @bean을 통해서 등록할때 메소드이름이 빈 이름이다)
       - 어플리케이션 컨텍스트 : 설정 정보를 가져와서 이를 기반으로 빈 생성, 관계 설정등의 제어를 해줌
         - BeanFactory를 구현했기때문에 빈 팩토리로 라고 부를수도있고 또는 IoC 컨테이너, 스프링컨테이너 라고 부르기도한다.
       - 어플리케이션 컨텍스트 동작방식
@@ -198,6 +198,9 @@
         - RuntimeException or RuntimeException 서브클래스
         - 예외처리 할수는 있으나 반드시처리해주어야하는것은 아님(컴파일 에러 안남)
         - 복구할 가능성이 없는것은 언체크 예외로처리하고 일괄적으로 handling 하는게 좋음(메일이 간다든가..)
+          - <span style="color:blue">만약 문제생겼을때 (특별한 로직을 수행하지않고, 혹은 다시 처리를 진행해야하는 등이 아닌) 
+          - 
+          - 에러를 리턴해줘야하는거면 그냥 언체크예외를 사용해서 일괄적으로 처리해주는게좋겟다.. (ex. 문제 생겼을때 kafka로 에러 코드 전달해주는것)</span>
       - 체크 예외
         - Excpetion or Exception클래스의 서브클래스 (Not RuntimeException)
         - 예외처리 반드시 해주어야함(컴파일 에러남)
@@ -248,9 +251,9 @@
     - 단일 책임원칙은 하나의 모듈에는 한가지 책임이 있어야한다는것이다. 즉, 모듈이 변경되어야할 이유도 하나여야 된다는것이다!
     - 이런 단일책임원칙을 잘 지켜졌을때, 수정해야할 부분이 명확해지며, 수정해야할곳도 최소한으로 줄게된다
   - 테스트와 서비스 추상화
-    - 로우레벨의 다양한 기술(하는 역할은 동일)에 대해 인터페이스를 활용하여 일관성 있는 접근 방법을 제공할수잇다. 이를 통해서 확장 불가능한 API도 서비스 추상화를 통해서 손쉽게 테스트가 가능하다
+    - 로우레벨의 다양한 기술(하는 역할은 동일)에 대해 ***인터페이스를 활용하여 일관성 있는 접근 방법을 제공***할수잇다. 이를 통해서 확장 불가능한 API도 서비스 추상화를 통해서 손쉽게 테스트가 가능하다
     - ***특히나 외부리소스 연동에는 서비스 추상화를 통해서 더욱 손쉽게 원하는 오브젝트에만 집중하여 테스트가 가능하다***
-      - 예를들어, 서비스계층에서 특정기능 수행시 확인 메일발송 기능이 있을때, 메일발송은 주된로직이 아니므로 이를 추상화해놓는다면(mock객체 생성) 빠르게 서비스의 주 기능을 테스트 해볼수있다
+      - 예를들어, 서비스계층에서 특정기능 수행시 확인 메일발송 기능이 있을때, 메일발송은 주된로직이 아니므로 이를 추상화해놓는다면(mock객체 생성가능) 빠르게 서비스의 주 기능을 테스트 해볼수있다
     - 테스트 대상으로부터 전달받은 정보를 검증할수있도록 설계된것을 목 오브젝트라한다
       - 스텁 + 테스트 결과 및 테스트 대상 오브젝트와 이와 연계된 의존오브젝트간에 일어나는일을 검증
       - *스텁 : 테스트 코드가 정상적으로 수행하는것을 도움
@@ -385,7 +388,7 @@
       - 격리수준
       - 제한시간
         - 트랜잭션 수행하는데 제한시간을 걸수 있음
-        - 기본값을 제한시간없음
+        - 기본값은 제한시간없음
       - 읽기전용
         - read only로 셋팅하면, 트랜잭션 내에서 데이터 조작하는시도를 막을수있음
     - 트랜잭션 사용시 트랜잭션 속성도 함께 프로퍼티로 셋팅가능한 TransactionInterceptor라는 트랜잭션 전용 advice가 있는데 런타임예외가 발생하면 트랜잭션은 롤백되지만, 체크예외를 던지는 경우에는 커밋이 된다(체크예외는 잡지않는다!)
