공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -462,7 +462,7 @@
         - 따로 bean id를 지정해주지않으면 클래스이름의 맨앞을 소문자로 바꿔서 bean id로 등록해줌
       - @ComponentScan
         - @Component가 자동으로 bean으로 등록시켜주려면 빈 스캔기능을 사용하겠다는 애노테이션 정의가 필요!
-        - @Component(basePackages="spring.good") 라고 정의할수도잇는데, spring.good 패키지 하위에잇는 모든 클래스를 스캔해준다
+        - @ComponentScan(basePackages="spring.good") 라고 정의할수도잇는데, spring.good 패키지 하위에잇는 모든 클래스를 스캔해준다
     - 컨텍스트 분리와 @Import
       - 독립적인 모듈은 context를 따로 빼는것이 좋다! 해당 context를 뺏다면 @Import를 통해서 가져오면된다!(근데 스프링부트를 사용하게되면 @Configuration으로 등록해도 상관없을듯한데..)
     - 프로파일
