--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -66,6 +66,10 @@
           - Provider\<T\> 사용
             - JSR-330(DIJ) 에 추가된 표준인터페이스
             - @Autowired로 주입받고 get()으로 가져오면 끝
+            - 객체를 stateful로 사용하려면 이거를 써야함..
+              - proxyMode를 target_class로 셋팅하면 메소드 호출할때마다 객체를 새로이만듦..
+                - <span style="color:yellow">이에대한 자세한 내용은 추후 다시 확인해볼것</span>
+                - https://coderedirect.com/questions/321125/what-is-a-scoped-proxy-in-spring
   - 싱글톤, 프로토타입 외 스코프 (웹 환경에서만 의미가 있음)
     - 프로토 타입과는 달리 스프링이 초기화에서부터 ***제거***까지 모두 관리
     - 사용방법 : 프로토타입과 동일
@@ -247,7 +251,7 @@
       - 트랜잭션 처리
       - *개발자가 해야할작업 : SQL, SQL에 넘겨줄 파라미터, 실행결과를 어떤 오브젝트에서 받을것인지, DB 커넥션 가져올 DataSource 정의
     - 스프링 JDBC DAO
-      - 도메인 오브젝트 or 테이블 단위로 DAO 생성! => DAO는 여러개
+      - ***도메인 오브젝트*** or ***테이블 단위***로 DAO 생성! => DAO는 여러개
   - ORM
     - 스터디필요
   - 트랜잭션
@@ -329,7 +333,9 @@
     - ORM : 오브젝트와 RDB사이에 존재하는 개념과 접근 방법, 성격의 차이 때문에 요구되는 불편한 작업을 제거해줘서, 자바 개발자가 오브젝트를 가지고 RDB에 적절한 형태로 변환하거나 반대로, RDB에 저장되어 있는 정보를 자바 오브젝트가 다루기 쉬운 형태로 변환해주는 기술!
       - ORM 사용하면 SQL문장을 직접 작성x
       - 즉, 쉽게 이야기하면 자바 오브젝트와 RDB사이에 ORM 프레임워크가 적절히 맵핑해주어, 데이터를 오브젝트 관점에서 핸들링 할수있는것!
-      - @EnableTransactionManager를 통해서 트랜잭션 AOP관련한 인프라 빈들이 등록됨.. 스프링부트에서는 jdbc사용하면 자동으로 등록이되는듯..
+    - @EnableTransactionManager를 통해서 트랜잭션 AOP관련한 인프라 빈들이 등록됨.. 스프링부트에서는 jdbc사용하면 자동으로 등록이되는듯..
+
+
 - 3장 스프링 웹 기술과 스프링 MVC
   - 기본적으로 서비스 계층과 데이터 엑세스 계층을 담은 ***루트에플리케이션 컨텍스트***와 스프링 웹 기술을 기반으로 동작하는 웹 관련 빈을 담은 ***서블릿 에플리케이션 컨텍스트***로 분리된다
     - 이를 통해서 다른 웹 기술을 사용할때 언제라도 대체가 가능할수있도록 할 수 있다.
@@ -444,7 +450,8 @@
             - 컨트롤러는 루트컨텍스트가아니라, 서블릿컨텍스트에 등록되어있어야 찾을수 있는것이 기본값인데, 루트 컨텍스트에서 컨트롤러를 등록해도 찾을수 있도록 변경할수있음.. 그러나 이는 사용하지말것!
     - 핸들러 인터셉터
       - DispatcherServlet이 컨트롤러 호출 전,후에 요청과 응답을 참조 or 가공가능하도록 해주는 전략(필터)
-      - 핸들러 맵핑은 DispatcherServlet으로부터 매핑작업 요청받으면 그 결과로 핸들러 실행체인(HandlerExecutionChain)을 돌려주는데, 하나 이상의 핸들러 인터셉터를 거쳐서 컨트롤러가 실행될수있도록 구성되어잇다!(프록시?)
+      - 핸들러 맵핑은 DispatcherServlet으로부터 매핑작업 요청받으면 그 결과로 핸들러 실행체인(HandlerExecutionChain)을 돌려주는데, 하나 이상의 핸들러 인터셉터를 거쳐서 컨트롤러가 실행될수있도록 구성되어잇다!(체인에 추가해서 전달해줌)
+        - 핸들러 맵핑에서 실행체인에 핸들러와 인터셉터들 셋팅해서 돌려주는것!
       - 핸들러 인터셉터 자체가 스프링의 빈이기 때문에 DI를 통해 다른 빈 활용가능
       - 핸들러매핑클래스에 프로퍼티를 이용해 셋팅함(3.0부터는 URL 패턴을 이용해서 모든 핸들러 매핑에 일괄 적용하는 기능이 추가됐다함)
       - ***컨트롤러***에 공통적으로 적용할 부가기능이라면 핸들러 인터셉터를 활용하는게좋음!(AOP로 구현하기 어렵고 복잡..)
@@ -558,7 +565,7 @@
       - 사용자한테 어떻게 보여줄지는 여기서 셋팅하고 자세한 로그나 알림이 필요하다면 인터셉터 핸들러의 afterCompletion을 통해서 하도록!
         - 응답에러 코드같은거는 핸들러예외리졸버에서 처리하고, 내부적인 처리는 afterCompletion에서 하는게 좋을듯!?
       - 종류
-        - AnnotationMethodHandlerExceptionResolver (디폴트)
+        - AnnotationMethodHandlerExceptionResolver (디폴트) (3.1부터는 ExceptionHandlerExceptionResolver)
           - 예외가 발생한 ***컨트롤러 내*** 의 메소드 중에서 @ExceptionHandler 붙은 메소드 실행
             - @RestControllerAdvice 를 통해서 하나의 클래스에 예외를 관리할수있음(컨트롤러에서 에러 떨어지면 해당 클래스로 전달됨)
               - @Rest~ 는 @ResponseBody 붙은거
@@ -623,7 +630,7 @@
       - InternalREsourceView는 "웹루트/WEB-INF/" 접근이 가능하기에 jsp파일을 가져올수있는것!
     - Spring Util을 잘 활용하자
       - ClassUtils.classPackageAsResourcePath(clazz) : clazz.class 파일의 경로가져옴
-      - ReflectionTuils.findMethod(클래스,"메소드명",파라미터클래스1,파라미터클래스2...) : Method 가져옴
+      - ReflectionUtils.findMethod(클래스,"메소드명",파라미터클래스1,파라미터클래스2...) : Method 가져옴
       - AnnotationsUtils.getAnnotation(Method, 어노테이션.class) : 어노테이션 가져옴
     - 프로퍼티를 사용할수 없고, 개별적으로 설정정보(ex. 하나의 클래스(인터페이스) 내에서 특정 메소드)를 지정해야할때 좋은 대안은 애노테이션!
       - 컨트롤러 입장에서 각 메소드 별로 다른 설정값들을 어노테이션을 활용해 일괄적으로 처리할수있다!(즉, 관례를 사용하여 공통으로 뺄 수 있도록 도와준다!)
