오탈자수정

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -931,7 +931,7 @@
                 - [validation-reference](https://www.baeldung.com/javax-validation)
                 - <span style="color:yellow"> 여기 내용 추가하자 </span>
           - BindingResult와 MessageCodeResolver
-            - BindingResult에는 모델의 바인딩 작업중에 나타난 타입 변환 오류정보와 검증 작업에서 발견된 검증 오류정보가 모두 저장
+            - BindingResult에는 모델의 바인딩 작업중에 나타난 ***타입 변환 오류정보***와 ***검증 작업에서 발견된 검증 오류정보***가 모두 저장
             - 이 오류 정보를 토대로 폼을 다시 띄울때 활용
             - 기본적으로 messages.properties와 같은 프로퍼티 파일에 담긴 메세지를 가져와 에러메세지로 활용함
             - BindingResult에 에러코드를 전달해서 넣어주면 MessageCodeResolver를 통해 좀더 상세한 메세지 키 값으로 확장
@@ -991,7 +991,7 @@
     - HTTP 요청 메세지 본문과 HTTP 응답 메세지 본문을 메세지로 다루는 방식을 사용할때 메세지 컨버터가 사용된다
       - @RequestBody, @ResponseBody 사용
     - 메시지 컨버터의 종류
-      - 컨버터는 HandlerAdapter에 등록
+      - 컨버터는 ***HandlerAdapter에 등록***
       - ByteArrayHttpMessageConverter
         - 바이트 배열로 가져옴
         - 미디어 타입은 모든것을 지원
@@ -999,7 +999,7 @@
       - StringHttpMessageConverter
         - 본문을 그대로 String으로 가져옴
         - 미디어 타입은 모든것을 지원
-        - @ResponseBody로 보낼때는 콘텐트 타입이 test/plain으로 지정
+        - @ResponseBody로 보낼때는 콘텐트 타입이 text/plain으로 지정
       - FormHttpMessageConverter
         - 미디어 타입이 application/x-www-form-urlencoded
       - SourceHttpMessageConverter
