공부한 내용추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -1038,7 +1038,7 @@
       - HandlerMethod
         - @RequestMapping이 붙은 메소드의 정보를 추상화한 오브젝트 타입
         - 컨트롤러 오브젝트 대신 추상화된 메소드 정보를 담은 HandlerMethod를 결과로 돌려주고, 핸들러 어뎁터는 HandlerMethod 오브젝트의 정보를 이용해 메소드를 실행
-          - 여기서 중요한것은 HandlerMethod는 그 자체가 실행 가능한 오브젝트가 아니다!! 대신, 메소드를 실행하는데 필요한 참조정보를 담고있는 오브젝트! 핸들러어뎁터를 이 참조정보를 활용해서 간접적으로 @RequestMapping의 메소드를 실행
+          - 여기서 중요한것은 HandlerMethod는 그 자체가 실행 가능한 오브젝트가 아니다!! 대신, 메소드를 실행하는데 필요한 참조정보를 담고있는 오브젝트! 핸들러어뎁터는 이 참조정보를 활용해서 간접적으로 @RequestMapping의 메소드를 실행
         - HandlerMethod에 담긴정보
           - 빈 오브젝트
           - 메소드 메타정보
@@ -1049,6 +1049,44 @@
           1. DispatcherServlet 시작
           2. RequestMappingHandlerMapping이 모든 컨트롤러 빈의 메소드를 살펴서 HandlerMethod 형태로 저장
           3. 요청 들어오면 해당 HandlerMethod 반환 (RequestMappingHandlerMapping 빈에 접근하면 저장된 핸들러 메소드 모두 확인 가능)
+          - *RequestMappingHandlerMapping에서 @RequestMapping으로 선언한 메소드(혹은 타입)의 메타정보들을 RequestMappingInfo에 저장하고, 이를 기반으로 HandlerMethod를 만들어서 Adapter가 이를 실행시킴!
+            - 참고로 interceptor는 RequestMappingHandlerMapping에 저장은 되는데, http 호출할때마다 RequestMappingHandlerMapping이 chain으로 만들어서 반환하고, 이를 handlerAdapter가 실행시킴
+            ```java
+            //RequestMappingHandlerMapping에서 HandlerMethod 등록되는과정.. 상세하게
+            //Look for handler methods in the specified handler bean.
+            public abstract class AbstractHandlerMethodMapping<T> extends AbstractHandlerMapping implements InitializingBean {
+              ...
+              protected void detectHandlerMethods(Object handler) {
+                Class<?> handlerType = (handler instanceof String ?
+                    obtainApplicationContext().getType((String) handler) : handler.getClass());
+
+                if (handlerType != null) {
+                  Class<?> userType = ClassUtils.getUserClass(handlerType);
+                  Map<Method, T> methods = MethodIntrospector.selectMethods(userType,
+                      (MethodIntrospector.MetadataLookup<T>) method -> {
+                        try {
+                          return getMappingForMethod(method, userType); //@RequestMapping에 대한 정보(path, http method, header, param, produce, consume 등)를 RequestMappingInfo로 만들어줌
+                        }
+                        catch (Throwable ex) {
+                          throw new IllegalStateException("Invalid mapping on handler class [" +
+                              userType.getName() + "]: " + method, ex);
+                        }
+                      });
+                  if (logger.isTraceEnabled()) {
+                    logger.trace(formatMappings(userType, methods));
+                  }
+                  else if (mappingsLogger.isDebugEnabled()) {
+                    mappingsLogger.debug(formatMappings(userType, methods));
+                  }
+                  methods.forEach((method, mapping) -> {
+                    Method invocableMethod = AopUtils.selectInvocableMethod(method, userType);
+                    registerHandlerMethod(handler, invocableMethod, mapping);       //여기서 handlerMethod를 만들고 저장함
+                  });
+                }
+              }
+              ...
+            }
+            ```
     - @RequestMapping 핸들러 매핑 : RequestMappingHandlerMapping
       - 클라이언트의 요청을 @RequestMapping이 붙은 메소드로 매핑해줌! 매핑결과는 HandlerMethod 타입으로 리턴해줌
       - 요청조건
@@ -1127,7 +1165,7 @@
           - 자세한 사용법은 필요시 찾아볼것
         - HandlerMethodReturnValueHandler
           - 리턴값 처리하는 기능 확장
-          - 3.1에 맞추어, ModleAndViewResolver 를 대체
+          - 3.1에 맞추어, ModelAndViewResolver 를 대체
           - RequestMappingHandlerAdapter의 customReturnValueHandlers 프로퍼티에 넣어주면됨
           - 자세한 사용법은 필요시 찾아볼것
     - @EnableWebMvc와 WebMvcConfigurationSupport를 이용한 @MVC 설정
@@ -1190,7 +1228,7 @@
 - 6장 테스트 컨텍스트 프레임워크
   - 스프링은 테스트가 사용하는 컨텍스트를 캐싱해서 여러 테스트에서 하나의 컨텍스트를 공유할 수 있는 방법을 제공
   - 테스트용 컨텍스트의 공유는 메소드내 뿐 아니라, 클래스 사이에서도 가능!
-    - 엄밀하게 이야기하면 테스크 컨텍스트 프레임워크가 애플리케이션 컨텍스트를 관리해서 같은 컨텍스트 사용하면 새로 만드는것이 아니라 계속 사용할수 있도록 해주는것임!
+    - 엄밀하게 이야기하면 테스트 컨텍스트 프레임워크가 애플리케이션 컨텍스트를 관리해서 같은 컨텍스트 사용하면 새로 만드는것이 아니라 계속 사용할수 있도록 해주는것임!
       - 참고로 테스트클래스는 빈이아니지만, @Autowired와 같은 어노테이션 등을 사용해서 DI 가능
     - A클래스에 컨텍스트 사용했으면, B클래스 테스트실행할때 A클래스 사용했던거 그대로 사용
     - 물론 동일한 설정 파일 아니면 새로이 만든다!
@@ -1327,7 +1365,7 @@
         - 스레드 풀을 여러개 만들고 특정 스레드풀을 지정해서 사용하고싶다면 @Async("스레드풀 등록한 빈 이름") 으로 지정가능
     - ThreadPoolTaskExecutor 사용방법 확인
       - pool이나 queue가 어떻게사용되고, pool은 어떻게 증가되는지, 적절한 스레드 풀 사이즈 등
-      - ThreadPoolTaskExcecutor 이 현재 기본값임
+      - ThreadPoolTaskExcecutor 가 현재 기본값임
       - core와 max가 같지않다면 적절한 queue 셋팅필요
         - 같으면 상관없음(그냥 큐에 계속 대기시켰다가 여유생기면 가져오니깐)
       - 스레드 수 = 사용 가능한 코어 수 * (1+대기 시간/서비스 시간)
@@ -1356,7 +1394,7 @@
         - [참고사이트](https://sheerheart.tistory.com/entry/%EC%8A%A4%ED%94%84%EB%A7%81-Async%EB%A5%BC-%ED%86%B5%ED%95%9C-%EB%B9%84%EB%8F%99%EA%B8%B0-%EC%B2%98%EB%A6%AC-%EB%B0%8F-%EC%84%A4%EC%A0%95%EA%B0%92)
         - [내용은 비슷한데 좀더 보기 좋게 잘 나와있음](https://kapentaz.github.io/spring/Spring-ThreadPoolTaskExecutor-%EC%84%A4%EC%A0%95/#)
   - 캐시 추상화
-    - AOP를 이용한것!
+    - ***AOP를 이용***한것!
     - 추상화 되어있기때문에 캐시 기술이 바뀌어도 괜춘!
     - 동일한 요청이 들어오면 캐시에 보관해두었던거를 돌려주니, 빠를뿐아니라 리소스를 아낄수있음
     - 동일한 결과 리턴하는 작업이 많고, 각 작업의 시간이 오래걸리는 경우에 사용하면좋다!
@@ -1405,6 +1443,7 @@
       - @Enable로 시작하는 애노테이션들은 모듈화된 빈 설정정보를 추가하면서 애노테이션의 엘리먼트를 사용해서 옵션들을 제공할수있도록 해주는데, ImportAware 인터페이스를 활용하면 가능!
         - 물론, 꼭 Enable로 시작해야하는것은 아니지만, 스프링의 관례이니 굳이 벗어나지말것
         - ***고정된 값*** 넘겨줄때 사용
+        - (netty 모듈로 만들때 사용하면좋을듯)
     - 빈 설정자
       - 엘리먼트로는 고정된 값만 가능하기때문에, ***코드를 이용해 복잡한 설정을 추가***해야할 필요가 있을때 사용
       - 대표적으로 WebMvcConfigurer가 있는데, 이를 통해서 @EnableWebMvc가 제공하는 기본 빈 설정정보에 추가해주는 역할을 한다
@@ -1471,7 +1510,8 @@
 ----
 
   - 서블릿 컨테이너와 스프링 컨테이너 (서블릿컨텍스트, 웹어플리케이션컨텍스트)
-    - 서블릿컨테이너는 톰캣이나 제티와같은 was에서 만들게되는데, 서블릿컨테이너가 서블릿 인터페이스를 구현한놈을 호출한다.. dispatcherservlet도 서블릿을 구현한놈으로 요놈을 호출하게되는데, 여기 dispatcherservlet에 서블릿 전용 웹어플리케이션컨텍스트를 가지게되어, 이 웹어플리케이션컨텍스트에 등록된 컨트롤러 빈들을 호출할수있게된다.. (dispatcherservlet은 스프링컨테이너가 관리하진않는다) 그리고 컨트롤러에있는 빈들은 루트 웹애플리케이션컨텍스트에 등록되어있는, 실제비지니스로직을 수행하는 빈들을 호출하여 작업을 진행한다.. 
+    - 서블릿컨테이너는 톰캣이나 제티와같은 was에서 만들게되는데, 서블릿컨테이너가 서블릿 인터페이스를 구현한놈을 호출한다.. dispatcherservlet도 서블릿을 구현한놈으로 요놈을 호출하게되는데, 여기 
+    - dispatcherservlet에 서블릿 전용 웹어플리케이션컨텍스트를 가지게되어, 이 웹어플리케이션컨텍스트에 등록된 컨트롤러 빈들을 호출할수있게된다.. (dispatcherservlet은 스프링컨테이너가 관리하진않는다) 그리고 컨트롤러에있는 빈들은 루트 웹애플리케이션컨텍스트에 등록되어있는, 실제비지니스로직을 수행하는 빈들을 호출하여 작업을 진행한다.. 
     - 무튼 결론은 서블릿컨테이너가 디스패처서블릿을 호출하고, 디스패처서블릿에 적용할 다양한 전략과, 컨트롤러빈들을 사용할수있게해주는것은 디스패처서블릿에있는 서블릿전용 웹어플리케이션컨텍스트 라고 보면될듯.. 그리고 서블릿전용 웹어플리케이샨컨텍스트는 상위컨텍스트인 루트 웹애플리케이션컨텍스트를 사용하여 비지니스로직를 수행할수맀음
 
     - WAS가 실행되면, servletContext를 기반으로 서블릿 컨테이너를 올리게된다.. 
@@ -1511,77 +1551,77 @@
 <br><br><br><br><br><br><br><br><br><br>
 - 빈들 등록하고 초기화 하는 곳..
   - <span style="color:yellow">나중에 기회되면 제대로 분석해볼것</span>
-```java
+   
+  ```java
 
-//AbstractApplicationContext 클래스
+  //AbstractApplicationContext 클래스
+    @Override
+    public void refresh() throws BeansException, IllegalStateException {
+      synchronized (this.startupShutdownMonitor) {
+        StartupStep contextRefresh = this.applicationStartup.start("spring.context.refresh");
 
-@Override
-	public void refresh() throws BeansException, IllegalStateException {
-		synchronized (this.startupShutdownMonitor) {
-			StartupStep contextRefresh = this.applicationStartup.start("spring.context.refresh");
+        // Prepare this context for refreshing.
+        prepareRefresh();
 
-			// Prepare this context for refreshing.
-			prepareRefresh();
+        // Tell the subclass to refresh the internal bean factory.
+        ConfigurableListableBeanFactory beanFactory = obtainFreshBeanFactory();
 
-			// Tell the subclass to refresh the internal bean factory.
-			ConfigurableListableBeanFactory beanFactory = obtainFreshBeanFactory();
+        // Prepare the bean factory for use in this context.
+        prepareBeanFactory(beanFactory);
 
-			// Prepare the bean factory for use in this context.
-			prepareBeanFactory(beanFactory);
+        try {
+          // Allows post-processing of the bean factory in context subclasses.
+          postProcessBeanFactory(beanFactory);
 
-			try {
-				// Allows post-processing of the bean factory in context subclasses.
-				postProcessBeanFactory(beanFactory);
+          StartupStep beanPostProcess = this.applicationStartup.start("spring.context.beans.post-process");
+          // Invoke factory processors registered as beans in the context.
+          invokeBeanFactoryPostProcessors(beanFactory); //********여기서 beanFactortyPostProcess 실행됨.. *********
 
-				StartupStep beanPostProcess = this.applicationStartup.start("spring.context.beans.post-process");
-				// Invoke factory processors registered as beans in the context.
-				invokeBeanFactoryPostProcessors(beanFactory); //********여기서 beanFactortyPostProcess 실행됨.. *********
+          // Register bean processors that intercept bean creation.
+          registerBeanPostProcessors(beanFactory);
+          beanPostProcess.end();
 
-				// Register bean processors that intercept bean creation.
-				registerBeanPostProcessors(beanFactory);
-				beanPostProcess.end();
+          // Initialize message source for this context.
+          initMessageSource();
 
-				// Initialize message source for this context.
-				initMessageSource();
+          // Initialize event multicaster for this context.
+          initApplicationEventMulticaster();
 
-				// Initialize event multicaster for this context.
-				initApplicationEventMulticaster();
+          // Initialize other special beans in specific context subclasses.
+          onRefresh();
 
-				// Initialize other special beans in specific context subclasses.
-				onRefresh();
+          // Check for listener beans and register them.
+          registerListeners();
 
-				// Check for listener beans and register them.
-				registerListeners();
+          // Instantiate all remaining (non-lazy-init) singletons.
+          finishBeanFactoryInitialization(beanFactory); //********** 여기서 사용자가 등록된 bean들이 실행됨 ***********
 
-				// Instantiate all remaining (non-lazy-init) singletons.
-				finishBeanFactoryInitialization(beanFactory); //********** 여기서 사용자가 등록된 bean들이 실행됨 ***********
+          // Last step: publish corresponding event.
+          finishRefresh();
+        }
 
-				// Last step: publish corresponding event.
-				finishRefresh();
-			}
+        catch (BeansException ex) {
+          if (logger.isWarnEnabled()) {
+            logger.warn("Exception encountered during context initialization - " +
+                "cancelling refresh attempt: " + ex);
+          }
 
-			catch (BeansException ex) {
-				if (logger.isWarnEnabled()) {
-					logger.warn("Exception encountered during context initialization - " +
-							"cancelling refresh attempt: " + ex);
-				}
+          // Destroy already created singletons to avoid dangling resources.
+          destroyBeans();
 
-				// Destroy already created singletons to avoid dangling resources.
-				destroyBeans();
+          // Reset 'active' flag.
+          cancelRefresh(ex);
 
-				// Reset 'active' flag.
-				cancelRefresh(ex);
+          // Propagate exception to caller.
+          throw ex;
+        }
 
-				// Propagate exception to caller.
-				throw ex;
-			}
-
-			finally {
-				// Reset common introspection caches in Spring's core, since we
-				// might not ever need metadata for singleton beans anymore...
-				resetCommonCaches();
-				contextRefresh.end();
-			}
-		}
-	}
-```
+        finally {
+          // Reset common introspection caches in Spring's core, since we
+          // might not ever need metadata for singleton beans anymore...
+          resetCommonCaches();
+          contextRefresh.end();
+        }
+      }
+    }
+  ```
